tests/positive/basic/byte_utf8_first_byte/input.ci
void main() {
    print(toString(byteAt("é", 0)) + "\n");
}
