tests/negative/runtime/byteat_utf8_negative/input.ci
void main() {
    print(toString(byteAt("é", -1)) + "\n");
}
